
*****

Changed default tags value from None to [].

*****

Implemented cli_tag() and prompt_search_tags() to enable
adding/removing tags from the command line.
Some documentation is TBD.


*****  Fri Sep 24 22:03:53 -03 2021  *****

Updated bm.search() to include searches by tag.
Testing is TBD.

*****

Implemented u.DynamicKeywordCompleter()
and u.DynamicKeywordCompleter() to improve and replace on the
auto completer searches, providing tab-completion options after keys
which can be colon-ended or double quote-ended.


*****  Mon Sep 27 11:30:13 -03 2021  *****

Completely refactored cli_search() function in __main__.py
enabling searches by tag and upgrading the completers.
Removed u.search_keys, no longer used.


*****  Tue Nov 30 23:56:37 CET 2021  *****

Enabled searches by tag in the browser.
The 't' keybinding launches the tag-search prompt, after the user
input, the main text will display only the entries containing the
requested tag(s).  If there is not matching entries, display all
entries of the database.


*****  Wed Dec 1 21:43:53 CET 2021  *****

In the browser, hide the info_bar when searching for tags,
(such that the search bar is at the bottom and the tab completions
are always displayed above it).

*****

Fixed search word completions (display only on-screen entries).
This commit should complete the new browser tag capabilities
proposed in #75 (only bibm ads-add tagging left to update)


*****  Sat Dec 4 01:36:03 CET 2021  *****

Updated am.add_bibtex() to include optional tags.
Updated tests and docstrings.

*****

Updated cli_ads_add() to enable passing tags to the entries.
Updated tests for many user-input cases for this cli.

*****

Fixed screen output when cli_ads_add()'s input prompt is blank.
Added test.

*****

Some PEP8ing.


*****  Sat Dec 4 13:08:59 CET 2021  *****

Updated docs adding the tag directive
and updating the index and the ads-add directive.

*****

Improved syntax in am.add_bibtex().
(No actual change in behavior)
